new tests added