@@ -11,6 +11,7 @@ import java.io.File;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -21,16 +22,16 @@ class OpentelemetryInstrumenterMojoTest {
   void shouldInstrumentSampleApplication(@TempDir File tempdir) throws Exception {
     // given
     OpentelemetryInstrumenterMojo mojo = new OpentelemetryInstrumenterMojo();
-    Path testApp = Path.of(JarTestUtil.getResourcePath("test-http-app.jar"));
+    Path testApp = Paths.get(JarTestUtil.getResourcePath("test-http-app.jar"));
     // when
     mojo.executeInternal(tempdir.getPath(), "-instrumented", Arrays.asList(testApp));
     // then
     Path instrumentedApp = tempdir.toPath().resolve("test-http-app-instrumented.jar");
     assertThat(Files.exists(instrumentedApp)).isTrue();
-    verifyApplicationRun(instrumentedApp);
+    verifyApplicationByExampleRun(instrumentedApp);
   }
 
-  private static void verifyApplicationRun(Path instrumentedApp) throws Exception {
+  private static void verifyApplicationByExampleRun(Path instrumentedApp) throws Exception {
     ProcessBuilder pb =
         new ProcessBuilder("java", "-jar", instrumentedApp.toString()).redirectErrorStream(true);
     Process process = pb.start();
